cluster/waterlog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waterlog
  namespace: waterlog
  labels:
    app: waterlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waterlog
  template:
    metadata:
      labels:
        app: waterlog
    spec:
      containers:
        - name: waterlog
          image: ghcr.io/needleinajaystack/waterlog:main@sha256:074c69a2c9714a2f1c17f72f417c92b14becf56a42a82aef33142e97b280dfb5
          ports:
            - name: waterlog
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 1Gi
      imagePullSecrets:
        - name: ghcr
