cluster/waterlog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waterlog
  namespace: waterlog
spec:
  selector:
    app: waterlog
  ports:
    - port: 8080
