cluster/waterlog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    external-dns.alpha.kubernetes.io/target: "97.117.4.142"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/response-set-header: |
      Alt-Svc "h3=\":443\"; ma=86400"
      Cross-Origin-Resource-Policy "same-origin"
      Content-Security-Policy "frame-ancestors 'none'; upgrade-insecure-requests; report-to cf-nel"
      Referrer-Policy "same-origin"
      Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options "nosniff"
  name: waterlog
  namespace: waterlog
  labels:
    app: waterlog
spec:
  ingressClassName: haproxy
  rules:
    - host: waterlog.herron.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: waterlog
                port:
                  number: 8080
    - host: wtrlog.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: waterlog
                port:
                  number: 8080
  tls:
    - hosts:
        - waterlog.herron.dev
      secretName: waterlog-tls
    - hosts:
        - wtrlog.com
      secretName: wtrlog-tls
